--- a/any.html
+++ b/any.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <title>before after</title>
     <style>
-        .test::before {
-            content: "Hello ";
-        }
-        .test::after {
-            content: " Teemo!";
+        .test {
+            height: 700px;
+            background: linear-gradient(to right, #ecf0f1, #2c3e50);
         }
     </style>
 </head>
+
 <body>
-    <div class="test">
-        captain
-    </div>
+    <div class="test"></div>
 </body>
+
 </html>
